# rpi_odor

./: .gitignore  README.md  proj-rpi-enose.code-workspace
.windsurf/rules/: remote-runtime.md
.windsurf/skills/crossbuild/: SKILL.md
.windsurf/skills/grpc-service/: SKILL.md
.windsurf/skills/nextjs-page/: SKILL.md
.windsurf/workflows/: plan-memory.md
config/: board_configs.yaml  experiments.yaml  heaters.yaml  liquids.yaml  substances.yaml  workflows.yaml
config/sensor_boards/: bme688_devkit.yaml
docker/: .env  docker-compose.yml
docker/init-db/: 01-init-schema.sql  02-add-pump-columns.sql  03-consumables.sql  04-pump-volumes.sql
docs/: ARCHITECTURE.md  HARDWARE_CONNECTIONS.md  RPI_BUILD_SETUP.md
enose-control/: .gitignore  CMakeLists.txt  Dockerfile.cross  conanfile.txt  enose-control.service
enose-control/config/: config.json  load_cell.json
enose-control/src/: main.cpp
enose-control/src/core/: config.cpp  config.hpp
enose-control/src/db/: connection_pool.cpp  connection_pool.hpp  consumable_repository.cpp  consumable_repository.hpp  test_run_repository.cpp  test_run_repository.hpp
enose-control/src/grpc/: consumable_service_impl.cpp  consumable_service_impl.hpp  control_service_impl.cpp  control_service_impl.hpp  experiment_service_impl.cpp  experiment_service_impl.hpp  grpc_server.cpp  grpc_server.hpp  load_cell_service_impl.cpp  load_cell_service_impl.hpp  sensor_service_impl.cpp  sensor_service_impl.hpp  test_service_impl.cpp  test_service_impl.hpp
enose-control/src/hal/: actuator_driver.cpp  actuator_driver.hpp  load_cell_driver.cpp  load_cell_driver.hpp  sensor_driver.cpp  sensor_driver.hpp
enose-control/src/workflows/: action_executor.cpp  action_executor.hpp  experiment_validator.cpp  experiment_validator.hpp  hardware_state_machine.cpp  hardware_state_machine.hpp  system_state.cpp  system_state.hpp  test_controller.cpp  test_controller.hpp  transaction_guard.hpp  yaml_parser.cpp  yaml_parser.hpp
enose-control/src/workflows/executors/: acquire_executor.cpp  acquire_executor.hpp  drain_executor.cpp  drain_executor.hpp  executors.hpp  inject_executor.cpp  inject_executor.hpp  wash_executor.cpp  wash_executor.hpp
enose-sensor-firmware/: .clang-format  .gitignore  README.md  addr2line.sh  bme-dev-kit-odor.code-workspace  partition.csv  platformio.ini
enose-sensor-firmware/docs/: ARCHITECTURE.md  HARDWARE.md  PROTOCOL.md  REFACTOR_PLAN.md
enose-sensor-firmware/serial_test/: README.md  main.py  pyproject.toml  serial_client.py
enose-sensor-firmware/src/: cmd_handler.cpp  cmd_handler.h  commMux.cpp  commMux.h  config.h  data_reporter.cpp  data_reporter.h  demo_app.h  led_controller.cpp  led_controller.h  main.cpp  utils.cpp  utils.h
enose-sensor-firmware/src/core/: sensor_array.h  sensor_types.h
enose-sensor-firmware/src/legacy/: 2024_07_09_22_47_Board_08F9E08A769C_PowerOnOff_1_a00zdtdmkylzo859_File_0.bmerawdata.json  2024_07_09_22_47_Board_08F9E08A769C_PowerOnOff_1_ywrnwl2eh4w8ebl5_File_0.bmerawdata.json  apple_3_d_195.bmespecimen.json
enose-sensor-firmware/src/sensors/: analog_array.cpp  analog_array.h  bme688_array.cpp  bme688_array.h
enose-sensor-firmware/test/: 1234.json
enose-ui/: package.json  pnpm-lock.yaml
enose-ui/public/programs/: apple_juice_standard.yaml  new_experiment.yaml  quick_test.yaml  simple_loop.yaml  simple_sample.yaml  wine_analysis.yaml  with_wash.yaml  with_wash2.yaml
enose-ui/src/app/: layout.tsx  page.tsx
enose-ui/src/app/api/consumables/: route.ts
enose-ui/src/app/consumables/: page.tsx
enose-ui/src/app/experiment/: page.tsx
enose-ui/src/app/experiment-editor/: page.tsx
enose-ui/src/app/logs/: page.tsx
enose-ui/src/app/system/: page.tsx
enose-ui/src/components/: control-panel.tsx  emergency-stop-button.tsx  experiment-flow.tsx  load-cell-panel.tsx  sensor-panel.tsx  sidebar.tsx  top-bar.tsx
enose-ui/src/components/experiment-editor/: ConfirmDialog.tsx  ExperimentEditor.tsx  compiler.ts  editor-styles.css  index.ts  store.ts  templates.ts  types.ts  yaml-converter.ts
enose-ui/src/hooks/: use-load-cell-stream.ts  use-sensor-stream.ts  use-status-stream.ts
enose-ui/src/lib/: api.ts  grpc-client.ts
klipper-config/: printer.cfg
klipper-plugins/: enose_control.py
proto/: README.md  buf.gen.yaml  buf.yaml  enose_config.proto  enose_consumable.proto  enose_data.proto  enose_experiment.proto  enose_service.proto
scripts/: build_cross.ps1  build_firmware.ps1  deploy_and_build.ps1  deploy_crossbuild_enose_control.ps1  deploy_docker_services.ps1  deploy_enose.ps1  deploy_klipper_config.ps1  deploy_klipper_plugin.ps1  deploy_rpibuild_enose_control.ps1  gen_proto_local.sh  remote_build.sh  remote_setup.sh  run_serial_test.ps1  view_enose_logs.ps1
(+38 files in other folders)
